
noinst_LIBRARIES = libnetwork.a
libnetwork_a_SOURCES = connection.c \
                      connection.h \
                      layer2.c \
                      layer2.h \
                      layer3.c \
                      layer3.h \
                      pcap_engine.c \
                      pcap_engine.h \
                      network.h

AM_CFLAGS  = -Wall
AM_CFLAGS += -I$(srcdir)/../
